<resources>
    <string name="app_name">Sun Network</string>
    <string name="percent">%1$s\%% Off</string>
    <string name="txt_strike"><strike>%1$s %2$s</strike></string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_coming_soon">Coming Soon</string>
    <string name="title_downloads">Downloads</string>
    <string name="title_more">More</string>
</resources>