<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_coming_soon"
        android:icon="@drawable/ic_soon"
        android:title="@string/title_coming_soon" />
    <item
        android:id="@+id/navigation_downloads"
        android:icon="@drawable/ic_downloads"
        android:title="@string/title_downloads" />
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more"
        android:title="@string/title_more" />

</menu>