<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sunnetwork.homescreen.view.HomeScreenFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_screen" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_search"
            app:destination="@id/navigation_search" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.sunnetwork.dashboard.DashboardFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_coming_soon"
            app:destination="@id/navigation_coming_soon" />
    </fragment>

    <fragment
        android:id="@+id/navigation_coming_soon"
        android:name="com.sunnetwork.dashboard.DashboardFragment"
        android:label="@string/title_coming_soon"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_coming_soon_to_navigation_downloads"
            app:destination="@id/navigation_downloads" />
    </fragment>

    <fragment
        android:id="@+id/navigation_downloads"
        android:name="com.sunnetwork.dashboard.DashboardFragment"
        android:label="@string/title_downloads"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_downloads_to_navigation_more"
            app:destination="@id/navigation_more" />
    </fragment>
    <fragment
        android:id="@+id/navigation_more"
        android:name="com.sunnetwork.dashboard.DashboardFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_dashboard" >
    </fragment>
</navigation>